tests/ui/validate_min_length_non_usize.rs
use gotham_formdata::FormData;

#[derive(FormData)]
struct MyFormData {
	#[validate(min_length = "foobar")]
	value: String
}

fn main() {
}
